--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 			<div class="top">
 				<section class="topbar">
 					<section class="name_box">
-						<h1 class="name">アジボラ・アイエニ</h1>
+						<div>
+							<h1 class="name">アジボラ・アイエニ</h1>
+						</div>
 					</section>
 					<div class="navigation">
 							<section class="nav_item_1">
