portfolio.html not working

--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
 									<section class="about_picture">
 										<img class="piano_rei" src="assets/images/tumblr_inline_nmmn7wlVbN1rxmvd4_500.gif" alt="ピアノ">
 									</section>
-								アジボラ・アイエニと申す詰まらないやつとして存在しております。1993年生まれ、現在２３歳アメリカのシカゴに住んでおります。あまりにもどうするか分からない人間なので、何かを書きたいか全然分かりません（笑）。。。
+									<div class="bio">
+										アジボラ・アイエニと申す詰まらないやつとして存在しております。1993年生まれ、現在２３歳アメリカのシカゴに住んでおります。あまりにもどうするか分からない人間なので、何かを書きたいか全然分かりません（笑）。。。
 
-								<br>
+										<br>
 
-								<br>
+										<br>
 
-								恥ずかしがりゃやし自分の情報とか伝えたくないし、このサイトの終りまで多分「えっ？まだ知らない人ってな感じ。。。」と思わせるはずやと思うんですけれど、このサイトをご覧になってくださってありがとうござい致します。</p>
+										恥ずかしがりゃやし自分の情報とか伝えたくないし、このサイトの終りまで多分「えっ？まだ知らない人ってな感じ。。。」と思わせるはずやと思うんですけれど、このサイトをご覧になってくださってありがとうござい致します。</p>
+									</div>
 						</section>
 					</div>
 
