--- a/portfolio.html
+++ b/portfolio.html
@@ -40,16 +40,16 @@
 							<p class="PORTFOLIO_blurb">
 								<!-- 好きなこと -->
 								<div class="fe3_box">
-									<a href="https://youtu.be/N4kI02naOqk" target="_blank"><img class='fe3' src="assets/images/FE3-790x580.jpg" alt="Rei - COCOA"></a>
+									<a class="cocoa" href="https://youtu.be/N4kI02naOqk" target="_blank"><img class='fe3' src="assets/images/FE3-790x580.jpg" alt="Rei - COCOA"></a>
 									
 								</div>
 
 								<div class="fe4_box">
-									<a href="https://youtu.be/kVSQnsuTs-g?t=25s" target="_blank"><img class='fe4' src="assets/images/FE4-790x580.jpg" alt="Animals As Leaders - Ka$cade"></a>
+									<a class="cascade" href="https://youtu.be/kVSQnsuTs-g?t=25s" target="_blank"><img class='fe4' src="assets/images/FE4-790x580.jpg" alt="Animals As Leaders - Ka$cade"></a>
 								</div>
 
-								<div class="fe6_box">
-									<a href="https://youtu.be/TFaO4zdO9QE" target="_blank"><img class='fe6' src="assets/images/FE6-790x580.jpg" alt="Vamps - Calling"></a>
+								<div class="fe5_box">
+									<a class="calling" href="https://youtu.be/TFaO4zdO9QE" target="_blank"><img class='fe5' src="assets/images/FE6-790x580.jpg" alt="Vamps - Calling"></a>
 								</div>
 
 
