--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,7 @@
 						<section class="about_me_header">
 							<h2>Portfolio ~Songs I enjoy~</h2>
 						</section>
+							<div>
 							<p class="PORTFOLIO_blurb">
 								<!-- 好きなこと -->
 								<div class="fe3_box">
@@ -54,6 +55,7 @@
 
 
 							</p>
+							</div>
 					</section>
 				</div>
 
